tree-sitter-shakar/grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $.expression_statement,
      $.assignment_statement,
      $.apply_assignment_statement,
      $.destructure_statement,
      $.return_statement,
      $.assert_statement,
      $.await_statement,
      $.await_any_statement,
      $.await_all_statement,
      $.break_statement,
      $.continue_statement,
      $.throw_statement,
      $.using_statement,
      $.defer_statement,
      $.hook_statement,
      $.decorator_statement,
      $.function_statement,
      $.catch_statement,
      $.rebind_statement,
      $.dbg_statement,
      $.if_statement,
      $.for_statement,
      $.guard_statement,
      $.comment
    ),

    assignment_statement: $ => seq(
      field('target', $.lvalue),
      '=',
      field('value', $._expression),
      optional($.terminator)
    ),

    return_statement: $ => prec.dynamic(1, seq(
      'return',
      optional(field('value', $._expression)),
      optional($.terminator)
    )),

    block_or_inline: $ => choice($.block, $.inline_body),

    guard_statement: $ => seq(
      choice($.guard_chain, $.await_guard_chain),
      optional($.terminator)
    ),

    guard_chain: $ => seq(
      $.guard_branch,
      repeat(seq(choice('|', '||'), $.guard_branch)),
      optional(seq(choice('|:', '||:'), $.inline_body))
    ),

    guard_branch: $ => seq(
      field('condition', $._expression),
      ':',
      field('body', $.inline_body)
    ),

    inline_body: $ => choice(
      $.brace_block,
      $._expression
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $._expression),
      ':',
      field('consequence', $.block),
      repeat($.elif_clause),
      optional($.else_clause)
    ),

    for_statement: $ => choice(
      seq(
        'for',
        field('binder', choice($.identifier, $.tuple_pattern)),
        'in',
        field('iterable', $._expression),
        ':',
        field('body', $.block)
      ),
      seq(
        'for',
        field('subject', $._expression),
        ':',
        field('body', $.block)
      )
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.application_expression,
      $.walrus_expression,
      $.catch_expression,
      $.catch_sugar_expression,
      $.conditional_expression,
      $.range_expression,
      $.logical_expression,
      $.compare_expression,
      $.binary_expression,
      $.unary_expression,
      $.await_expression,
      $.await_any_expression,
      $.await_all_expression,
      $.function_expression,
      $.call_expression,
      $.lambda_expression,
      $.primary_expression
    ),

    compare_expression: $ => prec.left(PREC.compare, seq(
      $._expression,
      $.cmp_operator,
      $._expression,
      optional($.ccc_chain)
    )),

    cmp_operator: _ => choice('==','!=','<=','>=','<','>','is','in','!is','not','!in'),

    postfix_expression: $ => prec.left(PREC.member, seq(
      choice($.primary_expression, $.postfix_expression),
      choice(
        $.call_arguments,
        $.field_expression,
        $.index_expression,
        $.field_fan
      )
    )),

    call_expression: $ => $.postfix_expression,

    call_arguments: $ => seq(
      '(',
      optional(seq($._expression, repeat(seq(',', $._expression)),
        optional(seq(',', $.named_argument, repeat(seq(',', $.named_argument)))))),
      ')'
    ),

    lvalue: $ => prec.left(PREC.member, seq(
      $.primary_expression,
      repeat(choice($.field_expression, $.index_expression, $.field_fan))
    )),

    primary_expression: $ => choice(
      $.object_literal,
      $.array_literal,
      $.set_literal,
      $.set_comprehension,
      $.dict_comprehension,
      $.list_comprehension,
      $.subject_expression,
      $.selector_literal,
      $.nullsafe_expression,
      $.amp_subject_reference,
      $.hole_expression,
      $._literal,
      $.identifier,
      seq('(', $._expression, ')')
    ),

    _literal: $ => choice($.string, $.raw_string, $.raw_hash_string, $.shell_string, $.number, $.boolean, $.nil),

    string: _ => choice(
      token(seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"')),
      token(seq("'", repeat(choice(/[^'\\\n]/, /\\./)), "'"))
    ),

    number: _ => token(seq(
      optional('-'),
      choice(
        /\d+\.\d*/,
        /\d*\.\d+/,
        /\d+/
      ),
      optional(seq(/[eE]/, optional(/[+-]/), /\d+/))
    )),

    boolean: _ => choice('true', 'false'),

    identifier: _ => /[A-Za-z_]\w*/,

    array_literal: $ => seq(
      '[',
      optional(seq($._expression, repeat(seq(',', $._expression)), optional(','))),
      ']'
    ),

    binder_pattern: $ => choice(
      seq('^', $.identifier),
      $.pattern
    ),

    pattern: $ => choice(
      $.identifier,
      $.tuple_pattern
    ),
